[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-image"
description = "A general-purpose Text to Image API built with Fal Serverless"
readme = "README.md"
dependencies = [
    "fal>=0.10.9",
    "pydantic<2.0,>=1.8",
]
version = "0.1.0"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.unimport]
remove = true
ignore_init = true

[tool.mypy]
no_warn_no_return = true
disallow_incomplete_defs = false
disable_error_code = "attr-defined"
